// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`P has default styles 1`] = `
.c0 {
  margin: 10px 0;
  min-height: 34px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<body>
  <div>
    <p
      class="c0"
    />
  </div>
</body>
`;

exports[`Ul has default styles 1`] = `
<body>
  .c0 {
  margin: 0;
  padding: 10px 0;
}

<div>
    <ul
      class="c0"
    />
  </div>
</body>
`;
